      Fix a memory leak when PAM authentication fails
    - d/p/0.113/Remove-a-redundant-assignment.patch:
      Fix a potential compiler warning
    - d/p/master/Fix-multi-line-pam-text-info.patch:
      Split into d/p/0.106/agenthelper-pam-Fix-newline-trimming-code.patch,
      d/p/0.114/Fix-multi-line-pam-text-info.patch,
      d/p/0.114/Refactor-send_to_helper-usage.patch

 -- Simon McVittie <smcv@debian.org>  Wed, 28 Mar 2018 12:10:49 +0100

policykit-1 (0.105-20) unstable; urgency=medium

  * Team upload
  * d/p/0.108/build-Fix-.gir-generation-for-parallel-make.patch:
    Add patch from upstream to fix parallel builds (Closes: #894205)

 -- Simon McVittie <smcv@debian.org>  Tue, 27 Mar 2018 13:50:28 +0100

policykit-1 (0.105-19) unstable; urgency=medium

  * debian/copyright: Use https URL for Format:
  * Update Vcs-* links for move to salsa.debian.org.
  * Fix typos in patch descriptions.
    Fixes lintian's spelling-error-in-patch-description complaints.
  * Move to debhelper compat level 10.
    Remove explicit dh-autoreconf, it's now done by default.
  * Bump Standards-Version to 4.1.3
  * Add autopkgtest.
    This covers the pkaction and pkcheck CLI tools.

 -- Martin Pitt <mpitt@debian.org>  Mon, 26 Mar 2018 21:42:28 +0200

policykit-1 (0.105-18) unstable; urgency=medium

  * Team upload.
  * master/Add-gettext-support-for-.policy-files.patch: Backport from master:
    Add .loc and .its files so that gettext can be used to translate policy
    files. Some upstreams, particularly those that are switching to meson,
    expect these files to be present so that their PK policy files can be
    translated. (Closes: #863207)

 -- Iain Lane <laney@debian.org>  Wed, 24 May 2017 11:21:35 +0100

policykit-1 (0.105-17) unstable; urgency=medium

  [ Michael Biebl ]
  * Use https:// for the upstream homepage.
  * Update Vcs-Browser to use cgit.
  * Rename the systemd service unit to polkit.service. It is now based on what
    was added upstream in 0.106.
