@@ -36,9 +36,9 @@
 0.114/Refactor-send_to_helper-usage.patch
 0.114/Add-gettext-support-for-.policy-files.patch
 0.114/gettext-switch-to-default-translate-no.patch
+0.114/Support-polkit-session-agent-running-outside-user-session.patch
 01_pam_polkit.patch
 02_gettext.patch
-03_polkitunixsession_sessionid_from_display.patch
 05_revert-admin-identities-unix-group-wheel.patch
 06_systemd-service.patch
 10_build-against-libsystemd.patch
